veryija na grani devlop

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
         <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, nostrum amet quos molestiae iure velit, dolore veniam tenetur quibusdam, molestias alias corrupti dolorem dicta! Sapiente tenetur iure natus error maxime.</h1>
     </div>
     
+    <ul>
+        <li>prva stavka</li>
+        <li>druga stavka</li>
+        <li>treca stavka</li>
+    </ul>
 </body>
 </html>
